2019-1/231/users/4237/executions/1874_1726.log
== TEST (2019-07-02 18:20:11) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for x in range(mat):
	print(min(mat[i,j]))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:21:04) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for x in range(mat):
	print(min(mat))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:21:19) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for x in mat:
	print(min(mat))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:21:35) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for x in mat:
	print(min(mat[i,j]))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:23:07) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for i in mat:
	for j in mat: 
		menor = min[i,j]

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:23:23) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for i in mat:
	for j in mat: 
		menor = min(mat[i,j])

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:23:53) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
menor = min(mat[i,j])

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:24:09) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
menor = min(mat)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:24:44) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
print(mat)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:28:44) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
print(mat)

for x in mat: 
	menor = min(mat[i,j])
	print(menor)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:29:53) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
print(mat)

for j in mat: 
	menor = min(mat[:,j])
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:30:11) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
print(mat)

for j in mat: 
	menor = min(mat[:,j])
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:33:01) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
print(mat)
menor = 0

for j in mat: 
	if (x < menor):
	 menor == x
print(menor)
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:33:56) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
print(mat)
menor = 0
for x in mat: 
	if (x < menor):
	 menor == x
	
print(menor)
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:35:39) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
print(mat)
menor = 0

for i in mat:
	for j in mat: 
		menor = min(mat[i,j])
	  
print(menor)
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:36:03) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
print(mat)

for i in mat:
	for j in mat: 
		menor = min(mat[i,j])
	  
print(menor)
	
	
	
	
	
	
-- EXECUTION TIME:
0.881802
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1874/1726/main.py", line 9, in <module>
    menor = min(mat[i,j])
IndexError: arrays used as indices must be of integer (or boolean) type

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:36:32) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
print(mat)

for i in mat:
	for j in mat: 
		menor = min(mat[i,:])
print(menor)
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:37:02) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
print(mat)

for i in mat:
	for j in mat: 
		min(mat[i,:])
print(min)
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:37:41) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
print(mat)

for i in range(mat):
	for j in range(mat): 
		menor min(mat[i,:])
print(min)
	
	
	
	
	
	
-- EXECUTION TIME:
0.943727
-- ERROR:
  File "/home/codebench/codes/1874/1726/main.py", line 9
    menor min(mat[i,:])
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:37:42) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
print(mat)

for i in range(mat):
	for j in range(mat): 
		menor min(mat[i,:])
print(min)
	
	
	
	
	
	
-- ERROR:
File "XXXX", line 9
    menor min(mat[i,:])
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:37:55) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
print(mat)

for i in range(mat):
	for j in range(mat): 
		menor = min(mat[i,:])
print(min)
	
	
	
	
	
	
-- EXECUTION TIME:
0.9577
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1874/1726/main.py", line 7, in <module>
    for i in range(mat):
TypeError: only integer scalar arrays can be converted to a scalar index

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:37:56) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
print(mat)

for i in range(mat):
	for j in range(mat): 
		menor = min(mat[i,:])
print(min)
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:38:53) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
print(mat)

for i in range(mat):
	for j in range(mat): 
	menor = min(mat[i,j])
print(min)
	
	
	
	
	
	
-- ERROR:
File "XXXX", line 9
    menor = min(mat[i,j])
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:39:13) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
print(mat)

for i in range(mat):
	for j in range(mat): 
		menor = min(mat[i,j])
		
print(min)
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:39:33) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
print(mat)

for i in mat:
	for j in mat: 
		menor = min(mat[i,j])
		
print(min)
	
	
	
	
	
	
-- EXECUTION TIME:
0.833118
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1874/1726/main.py", line 9, in <module>
    menor = min(mat[i,j])
IndexError: arrays used as indices must be of integer (or boolean) type

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:39:33) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
print(mat)

for i in mat:
	for j in mat: 
		menor = min(mat[i,j])
		
print(min)
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:40:43) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
print(mat)

for i in mat:
	for j in mat: 
		menor = min(mat[i,j])
print(min)
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:42:26) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for j in mat:
	for i in mat: 
		menor = min(mat[i,j])
print(min)
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:42:44) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for x in mat:
		menor = min(mat[i,j])
print(min)
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:42:59) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for x in mat:
		menor = min(mat)
print(min)
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:43:00) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for x in mat:
		menor = min(mat)
print(min)
	
	

	
	
	
-- EXECUTION TIME:
1.26105
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1874/1726/main.py", line 7, in <module>
    menor = min(mat)
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:43:20) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for x in mat:
		menor = min(mat[i,:])
print(min)
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:43:29) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for i in mat:
		menor = min(mat[i,:])
print(min)
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:43:50) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for i in mat:
		menor = min(mat[:,i])
print(min)
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:44:25) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for i in mat:
	print(mat[i,j])
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:44:46) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for i in mat:
	for j in mat:
		print(mat[i,j])
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:45:13) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for i in mat:
	for j in mat:
		
	
	

	
	
	
-- ERROR:
File "XXXX", line 15
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:45:22) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for i in mat:
	for j in mat:
-- ERROR:
File "XXXX", line 8
    
                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:45:37) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for i in mat:
	for j in mat:
		print(mat[i,j])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:46:30) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for j in range(mat):
	for i in range(mat):
		
-- ERROR:
File "XXXX", line 9
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:46:45) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for j in range(mat):
	for i in range(mat):
		print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:46:46) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for j in range(mat):
	for i in range(mat):
		print(mat)
-- EXECUTION TIME:
0.770069
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1874/1726/main.py", line 6, in <module>
    for j in range(mat):
TypeError: only integer scalar arrays can be converted to a scalar index

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:46:54) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for j in range(mat):
	for i in range(mat):
		print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:47:18) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for j in mat:
	for i in mat:
		print(mat[i,:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:48:07) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for j in mat:
	for i in mat:
		print(mat[i,j])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:49:18) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for j in mat:
	for i in mat:
			print(mat[0,0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:50:24) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for j in mat:
	for i in mat:
	menor = min(mat[:,j])
		
print(mat[0,0])
-- ERROR:
File "XXXX", line 8
    menor = min(mat[:,j])
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:50:39) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for j in mat:
	for i in mat:
	menor = min(mat[i,j])
		
print(mat[0,0])
-- ERROR:
File "XXXX", line 8
    menor = min(mat[i,j])
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:51:33) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for j in mat:
	for i in mat:
		
menor = min(mat[i,j])
print(mat[0,0])
-- ERROR:
File "XXXX", line 9
    menor = min(mat[i,j])
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:54:45) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for i in mat:
	m = min(mat[i,:])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:55:19) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
menor = 0 
for i in mat:
	menor = min(mat[i,:])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:55:55) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
menor = 0 

for i in range(mat):
	menor = min(mat[i,:])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:56:07) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
menor = 0 

for i in range(size(mat):
	menor = min(mat[i,:])
	
-- ERROR:
File "XXXX", line 7
    for i in range(size(mat):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:56:19) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
menor = 0 

for i in range(size(mat)):
	menor = min(mat[i,:])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:57:02) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
menor = 0 

for i in range(size(mat)):
	menor = min(mat[i,:])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:57:41) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
menor = 0 

for i in range(size(mat)):
	for j in range(size(mat)):
		menor = min(mat[i,:])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:57:56) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
menor = 0 

for i in range(size(mat)):
	for j in range(size(mat)):
		menor = min(mat[i,j])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:58:10) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
menor = 0 

for i in range(size(mat)):
	for j in range(size(mat)):

	
-- ERROR:
File "XXXX", line 11
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:58:29) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
menor = 0 

for i in range(size(mat)):
	for j in range(size(mat)):
		print(mat[i,j])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:59:07) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
menor = 0 

for i in range(size(mat)):
	for j in range(size(mat)):
		
	
-- ERROR:
File "XXXX", line 11
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:59:14) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
menor = 0 

for i in range(size(mat)):
	for j in range(size(mat)):
		
	
-- EXECUTION TIME:
0.631844
-- ERROR:
  File "/home/codebench/codes/1874/1726/main.py", line 11
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:59:27) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
menor = 0 

for i in range(size(mat)):
	for j in range(size(mat)):
		print(mat)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:00:53) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
menor = 0 

for i in range(size(mat)):
	for j in range(size(mat)):
		menor = min(mat[i,j])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:01:20) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
menor = 0 

for i in range(size(mat)):
	for j in range(size(mat)):
		menor = min(mat[i,:])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:01:38) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
menor = 0 

for i in range(size(mat)):
	for j in range(size(mat)):
		menor = min(mat[:,i])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:12:11) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
menor = 0 

for i in range(size(mat)):
	for j in range(size(mat)):
		menor = min(mat[:,i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:12:34) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
menor = 0 

for i in range(size(mat)):
	for j in range(size(mat)):
		menor = min(mat[:,i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:13:29) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
menor = 0 

for x in range(size(mat)):
	menor = min(mat[:,j])
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:13:42) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
menor = 0 

for i in range(size(mat)):
	menor = min(mat[:,i])
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:13:44) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
menor = 0 

for i in range(size(mat)):
	menor = min(mat[:,i])
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:15:02) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
menor = 0 

for i in range(size(mat)):
	for j in range(size(mat)):
		 menor = mat[i,j] 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:26:25) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
menor = 0 

for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		menor = min(mat[i,j])
		
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:26:58) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		menor = min(mat[i,j])
		
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:27:55) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for x in range(size(mat)):
		menor = min(mat[i,j])
		
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:28:33) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for i in range(size(mat)):
		menor = min(mat[:,i])
		
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 19:28:52) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for i in range(size(mat)):
	
		
			
			
-- EXECUTION TIME:
0.739097
-- ERROR:
  File "/home/codebench/codes/1874/1726/main.py", line 11
    
       ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:29:06) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for i in range(size(mat)):
print(mat)
		
			
			
-- ERROR:
File "XXXX", line 7
    print(mat)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:29:14) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for i in range(size(mat)):
	print(mat)
		
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:30:06) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for i in range(size(mat)):
	if(i == min(mat[i,j])):
		print(i)
		
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:30:39) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))

for i in range(size(mat)):
	for j in range(size(mat)):
		if(i == min(mat[i,j])):
		print(i)
		
			
			
-- ERROR:
File "XXXX", line 9
    print(i)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:31:39) 
-- CODE:
from numpy import* 
from numpy.linalg import*

mat = array(eval(input("Notas: ")))
menor == min(mat[i,j])
	
		
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:32:29) 
-- CODE:
from numpy import* 
from numpy.linalg import*
menor = 0 

mat = array(eval(input("Notas: ")))
menor == min(mat[i,j])
	
		
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:32:45) 
-- CODE:
from numpy import* 
from numpy.linalg import*
menor = 0 

mat = array(eval(input("Notas: ")))
menor == min(mat[i,j])
	
		
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:33:27) 
-- CODE:
from numpy import* 
from numpy.linalg import*

menor = 0 

mat = array(eval(input("Notas: ")))

for i in range(size(mat)):
	for j in range(size(mat)):
		menor == min(mat[i,j])
	
		
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:34:19) 
-- CODE:
from numpy import *
from numpy.linalg import *

menor = 0 

mat = array(eval(input("Notas: ")))

for i in range(size(mat)):
	for j in range(size(mat)):
		menor == min(mat[i,j])
	
		
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:34:43) 
-- CODE:
from numpy import *
from numpy.linalg import *

menor = 0 

mat = array(eval(input("Notas: ")))

for i in range(size(mat)):
	for j in range(size(mat)):
		menor = min(mat[i,j])
	
		
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:36:05) 
-- CODE:
from numpy import *
from numpy.linalg import *

menor = 0 

mat = array(eval(input("Notas: ")))

for x in range(size(mat)):
	
	
	
		
			
			
-- ERROR:
File "XXXX", line 15
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:37:20) 
-- CODE:
from numpy import *
from numpy.linalg import *

menor = 0 

mat = array(eval(input("Notas: ")))

for x in range(size(mat)):
	menor = min(mat[i,j])
	
	
		
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
